# compression-drives-truth

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  RESPONSE_TO_REVIEWER.md  TODO.md  TODO_HYPOTHESIS.md  TODO_v2.md  claims_manifest.md  fix_plan.md  kaggle_train_1b.py  main.py  modal_deploy.py  modal_run.py  modal_run_lora.py  modal_run_qwen.py  paper_draft_en.md  paper_draft_ru.md  paper_v2.md  paper_v3.md  plan.md  pyproject.toml  requirements.txt  results_manifest.md  results_master.csv  run_bpe_experiment.sh  run_bugfix_rerun.sh  run_chained.sh  run_chained_scaling.sh  run_chained_truncated.sh  run_coherent_paired_eval.sh  run_continue.sh  run_crossdomain.sh  run_generation_check.sh  run_generation_check_full.sh  run_generation_eval_all.sh  run_large_extra_seeds.sh  run_large_modal.py  run_multirule.sh  (+12 more)
analysis/: compression_measure.py  plot_chained.py  plot_compression_vs_accuracy.py  plot_conceptual.py  plot_crossdomain.py  plot_full_scaling.py  plot_learning_curves.py  plot_nll_histogram.py  plot_paper_v2_figures.py  plot_phase2.py  plot_phase3.py  plot_results.py  plot_scaling_multirule.py  plot_world_multialt.py
archive/: publication_plan.md
data/: eval_inputs_manifest.md  generate_math.py  generate_math_chained.py  generate_math_conditions.py  generate_math_crossdomain.py  generate_math_denoising.py  generate_math_matched.py  generate_math_multirule.py  generate_math_observed.py  generate_paired_test.py  generate_paired_test_world.py  generate_synthetic_world.py  generate_wiki_corpus.py
docs/: refs_audit.md
latex/: paper.tex
(+1598 files in other folders)
