[project]
name = "compression-drives-truth"
version = "0.1.0"
description = "Experiments: error structure determines correctness preference in contradictory training data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "sympy",
    "tqdm",
    "matplotlib",
]
